[package]
name = "mpmc-async"
version = "0.1.7"
edition = "2021"
description = "A multi-producer, multi-consumer async channel with reservations"
repository = "https://github.com/jeremija/mpmc-async"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros", "time"] }
tokio-test = "0.4.4"
